; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scr-x.c_ScreenRestoreResolution.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scr-x.c_ScreenRestoreResolution.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@x11Conf = common dso_local global i32* null, align 8
@x11OriginalSizeId = common dso_local global i32 0, align 4
@x11OriginalRotation = common dso_local global i32 0, align 4
@x11OriginalRate = common dso_local global i32 0, align 4
@CurrentTime = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ScreenRestoreResolution() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32*, i32** @x11Conf, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  br label %20

6:                                                ; preds = %0
  %7 = call i32* @XOpenDisplay(i32* null)
  store i32* %7, i32** %1, align 8
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @RootWindow(i32* %8, i32 0)
  store i32 %9, i32* %2, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = load i32*, i32** @x11Conf, align 8
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @x11OriginalSizeId, align 4
  %14 = load i32, i32* @x11OriginalRotation, align 4
  %15 = load i32, i32* @x11OriginalRate, align 4
  %16 = load i32, i32* @CurrentTime, align 4
  %17 = call i32 @XRRSetScreenConfigAndRate(i32* %10, i32* %11, i32 %12, i32 %13, i32 %14, i32 %15, i32 %16)
  %18 = load i32*, i32** %1, align 8
  %19 = call i32 @XCloseDisplay(i32* %18)
  br label %20

20:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32* @XOpenDisplay(i32*) #1

declare dso_local i32 @RootWindow(i32*, i32) #1

declare dso_local i32 @XRRSetScreenConfigAndRate(i32*, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XCloseDisplay(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
